    - Message extraction: Should we do this in R, using XiMpLe? That might allow us to give better context / comments
    - Don't forget to write documentation
    - What should be the policy regarding installing translations (80% criterion)
    - Where should the extraction script look for i18n comments (before element, within element)?

--- Version 0.6.2 - Oct-20-2014
- In data editor, indicate NAs, explicitly
- Import Stata plugin gains option to convert character encoding.
- New plugin for recoding categorical data
- New embeddable (minimal) plugin "multi_input" to combine different input elements
- Fixed: Problems starting from paths with spaces in the file name on Windows
- Added command line option --r-executable for switching between several installations of R
- Use a binary wrapper, instead of wrapper shell script for startup on all platforms
- Linear regression plugin gains option to save predicted values
- Fixed some compilation problems
- Add basic support to export plots using tikzDevice
- Fixed: cbind-value of <matrix> element was missing commas
- Fixed: Give a label to an unlabelled toolbar
- Fixed: Adjust to (re-?)named parameters for options("pager")
- Allow plugin UI script code to query R for information
- Fixed: potential crash when a previously installed pluginmap is not longer readable
- Allow to connect <varslot>/<valueslot> source to any property, not just <varselectors>
- New plugin elements <valueselector> and <select>
- New plugin element <valueslot> for selecting arbitrary string values (otherwise almost identical to <varslot>)
- <varslots> can be set to accept the same object several times. Used in scatterplot plugin.
- New R function rk.embed.device() for manually embedding graphics devices in RKWard
- Fixed: R backend would exit immediately, without meaningful error message, if there is an error in .Rprofile (or Rprofile.site)
- Fixed: Installing suggested packages from the package installation dialog was broken