@@ -65,7 +65,7 @@ RKFormula::RKFormula (const QDomElement &element, RKComponent *parent_component,
 	QVBoxLayout *vbox = new QVBoxLayout (this);
 	vbox->setContentsMargins (0, 0, 0, 0);
 
-	vbox->addWidget (new QLabel (xml->getStringAttribute (element, "label", i18n ("Specify model"), DL_INFO), this));
+	vbox->addWidget (new QLabel (xml->i18nStringAttribute (element, "label", i18n ("Specify model"), DL_INFO), this));
 
 	type_selector = new QButtonGroup (this);
 	QRadioButton* button;
