@@ -7,6 +7,12 @@
     - Don't forget to write documentation
     - What should be the policy regarding installing translations (80% criterion)
     - Where should the extraction script look for i18n comments (before element, within element)?
+    - discuss i18n_context vs. comments
+    - Important pitfalls: String comparison with checkbox / radio labels! (Definitely wrong in some plugins)
+   - i18n calls
+    - wcgrep getStringAttribute.*i18n
+    - is <caption title="XYZ"> used, anywhere?
+    - element text
 
 --- Version 0.6.2 - Oct-20-2014
 - In data editor, indicate NAs, explicitly
